configured for javamain

--- a/config/components.yml
+++ b/config/components.yml
@@ -26,16 +26,16 @@ containers:
 # In order to use Oracle JREs instead of OpenJDK, you must comment out the OpenJDK line and uncomment the Oracle line.
 # Please see the documentation for more detail.
 jres:
-  - "JavaBuildpack::Jre::OpenJdkJRE"
-# - "JavaBuildpack::Jre::OracleJRE"
+        #  - "JavaBuildpack::Jre::OpenJdkJRE"
+ - "JavaBuildpack::Jre::OracleJRE"
 
 frameworks:
   - "JavaBuildpack::Framework::AppDynamicsAgent"
   - "JavaBuildpack::Framework::JavaOpts"
-  - "JavaBuildpack::Framework::MariaDbJDBC"
+    #  - "JavaBuildpack::Framework::MariaDbJDBC"
   - "JavaBuildpack::Framework::NewRelicAgent"
-  - "JavaBuildpack::Framework::PlayFrameworkAutoReconfiguration"
-  - "JavaBuildpack::Framework::PlayFrameworkJPAPlugin"
-  - "JavaBuildpack::Framework::PostgresqlJDBC"
+    #  - "JavaBuildpack::Framework::PlayFrameworkAutoReconfiguration"
+    #  - "JavaBuildpack::Framework::PlayFrameworkJPAPlugin"
+    #  - "JavaBuildpack::Framework::PostgresqlJDBC"
   - "JavaBuildpack::Framework::SpringAutoReconfiguration"
   - "JavaBuildpack::Framework::SpringInsight"
