--- a/config/components.yml
+++ b/config/components.yml
@@ -16,12 +16,12 @@
 # Configuration for components to use in the buildpack
 ---
 containers:
-  - "JavaBuildpack::Container::Groovy"
+#  - "JavaBuildpack::Container::Groovy"
   - "JavaBuildpack::Container::JavaMain"
-  - "JavaBuildpack::Container::PlayFramework"
-  - "JavaBuildpack::Container::Ratpack"
-  - "JavaBuildpack::Container::SpringBootCLI"
-  - "JavaBuildpack::Container::Tomcat"
+#  - "JavaBuildpack::Container::PlayFramework"
+#  - "JavaBuildpack::Container::Ratpack"
+#  - "JavaBuildpack::Container::SpringBootCLI"
+#  - "JavaBuildpack::Container::Tomcat"
 
 # In order to use Oracle JREs instead of OpenJDK, you must comment out the OpenJDK line and uncomment the Oracle line.
 # Please see the documentation for more detail.
@@ -30,12 +30,12 @@ jres:
  - "JavaBuildpack::Jre::OracleJRE"
 
 frameworks:
-  - "JavaBuildpack::Framework::AppDynamicsAgent"
+#  - "JavaBuildpack::Framework::AppDynamicsAgent"
   - "JavaBuildpack::Framework::JavaOpts"
     #  - "JavaBuildpack::Framework::MariaDbJDBC"
-  - "JavaBuildpack::Framework::NewRelicAgent"
+#  - "JavaBuildpack::Framework::NewRelicAgent"
     #  - "JavaBuildpack::Framework::PlayFrameworkAutoReconfiguration"
     #  - "JavaBuildpack::Framework::PlayFrameworkJPAPlugin"
     #  - "JavaBuildpack::Framework::PostgresqlJDBC"
-  - "JavaBuildpack::Framework::SpringAutoReconfiguration"
-  - "JavaBuildpack::Framework::SpringInsight"
+#  - "JavaBuildpack::Framework::SpringAutoReconfiguration"
+#  - "JavaBuildpack::Framework::SpringInsight"
